styles.scss
@import "modules/_typography";
@import "modules/_colors";
@import "modules/_grid";
@import "modules/_breakpoints";

body {
  background-color: $color-bg;
}
h1 {
  font-family: $font-secondary;
  font-size: 24px;
  margin: 5px 0;
  text-transform: uppercase;
  font-weight: 900;
}
h2 {
  font-family: $font-secondary;
  font-size: 48px;
  margin-top: 0;
  text-align: center;
  text-transform: uppercase;
}
p {
  font-family: $font-secondary;
  font-size: 14px;
}
a {
  color: $color-primary;
  &:hover {
    color: $color-secondary;
  }
}

.contact {
  margin: 0 100px;
  p {
    line-height: 24px;
  }
  .description {
    padding: 0 50px;
  }
  input,
  textarea {
    display: block;
    width: 90%;
    padding: 10px;
    margin: 10px 0;
    font-family: $font-main;
    // border: 1px solid $color-primary;
    background: $color-bg;
  }
  input[type="submit"] {
    display: block;
    cursor: pointer;
    width: 90%;
    transition: 0.8s;
  }
  @media #{$break-sm} {
    margin: 0;
    .description {
      padding: 0;
    }
    input[type="submit"] {
      margin: auto;
    }
  }
  @media #{$break-md} {
    margin: 0;
    .description {
      padding: 0 5px;
    }
  }
}
.bold {
  font-weight: bold;
}
.detail {
  margin-top: 60px;
}
.descrip-img {
  width: 90%;
}
.photo {
  p {
    font-family: $font-main;
  }
  img {
    display: block;
    width: 100%;
  }
  .description {
    display: block;
    padding-left: 20px;
    width: 70%;
  }
}
.tech {
  img {
    display: block;
    width: 100%;
  }
}
.video {
  iframe {
    width: 100%;
    @media #{$break-sm} {
      height: 200px;
    }
  }
}

